workloads/eks-example-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-primer
  namespace: default
  labels:
    app: eks-primer
  annotations:
    # Container Image Automated Updates
    flux.weave.works/automated: "true"
    # do not apply this manifest on the cluster
    #flux.weave.works/ignore: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-primer
  template:
    metadata:
      labels:
        app: eks-primer
    spec:
      containers:
      - name: eks-primer
        image: 164382793440.dkr.ecr.us-west-2.amazonaws.com/eks-primer:75b272ad
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: eks-primer
  namespace: default
  labels:
    app: eks-primer
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: eks-primer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-primer
  namespace: default
  labels:
    app: eks-primer
  annotations:
    alb.ingress.kubernetes.io/group.name: prom
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/inbound-cidrs: 205.251.233.0/24
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 3030}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: 200,302
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: eks-primer
          servicePort: 80
